Bug 444704 - 'Backup Status' widget displays an error message: 'Error, no connection to kup-daemon...'
Summary: 'Backup Status' widget displays an error message: 'Error, no connection to ku...
Status: RESOLVED FIXED
Alias: None
Product: kup
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Persson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-31 11:12 UTC by Patrick Silva
Modified: 2024-03-24 21:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
screenshot (19.35 KB, image/png)
2021-10-31 11:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-10-31 11:12:14 UTC
STEPS TO REPRODUCE
1. add 'Backup Status' widget to desktop
2. 
3. 

OBSERVED RESULT
'Backup Status' widget displays the error message seen in the attached screenshot.

EXPECTED RESULT
no error message

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.3
Graphics Platform: Wayland

ADDITIONAL INFORMATION
if you do not see the error message, increase the widget size
Comment 1 Patrick Silva 2021-10-31 11:13:36 UTC
Created attachment 143047 [details]
screenshot
Comment 2 Martin Koller 2021-10-31 20:27:34 UTC
are you sure you are reporting a problem about kbackup ?
I have no clue what you show me here.
kbackup has no 'Backup Status' widget.
Comment 3 Patrick Silva 2021-10-31 21:34:27 UTC
The widget seen in the screenshot appeared on my system together Backup KCM in System Settings.
Please re-assign this bug if kbackup is not the correct product.
Comment 4 Patrick Silva 2021-11-12 11:27:48 UTC
Thanks Martin.
Comment 5 Simon Persson 2024-03-24 21:10:06 UTC
Git commit 07ee384082f1b2efa7a57e120c0dd5dc17d435aa by Simon Persson.
Committed on 24/03/2024 at 21:09.
Pushed by persson into branch 'master'.

Remove connection error text from data source

The error message displayed to user was not translated and regardless of
what the problem was, would not help the user figure out how to solve it.
If there even was a problem. Because it could also be displayed if the
plasmoid was forced to be displayed even when kup backups was not enabled.

M  +1    -5    dataengine/kupengine.cpp

https://invent.kde.org/system/kup/-/commit/07ee384082f1b2efa7a57e120c0dd5dc17d435aa